--- a/GuitarHero/html/game.html
+++ b/GuitarHero/html/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Game</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- <script src="js/clean.js"></script> -->
         <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -21,7 +21,7 @@
     </div>
         <div class="offset-3- col-6">
             <h1 id="timer">Time</h1>
-            <canvas class="offset-6" id="marco" width="900" height="800"></canvas>
+            <canvas class="offset-6" id="marco" width="900" height="860"></canvas>
             <div class="dev">
                 <h3>DEV CONTROLS</h3>
                 <button onclick="generateNewColors()">Test</button>
@@ -44,6 +44,6 @@
       <h1 class="offset-5 col-2 text-center">Copyright</h1>
     </div>
 </body>
-<script src="js/clean.js" ></script>
+<script src="../js/clean.js" ></script>
 
 </html>
