--- a/GuitarHero/html/tempIndex.html
+++ b/GuitarHero/html/tempIndex.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Canvas Game</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <!-- <script src="js/clean.js"></script> -->
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -109,6 +109,6 @@
   </div>
 
 </body>
-<script src="js/menuNavigation.js"></script>
+<script src="../js/menuNavigation.js"></script>
 
 </html>
