--- a/GuitarHero/html/game.html
+++ b/GuitarHero/html/game.html
@@ -16,13 +16,14 @@
 <body class="container-fluid row p-0 m-0">
 
     <!-- Headder  -->
+    <!-- Headder  -->
     <div class="row header  p-0 m-0 ">
-      <h1 class="offset-5 col-2 text-center">Canvas Game</h1>
-    </div>
-        <div class="offset-3- col-6">
-            <h1 id="timer">Time</h1>
-            <canvas class="offset-6" id="marco" width="900" height="860"></canvas>
-            <div class="dev">
+        <h1 class="offset-5 col-2 text-center">Canvas Game</h1>
+      </div>
+        <div class="offset-3 col-6" >
+            <canvas class="offset-1 col-10 mt-3" id="marco" width="900" height="900"></canvas>
+        </div>
+            <!-- <div class="dev">
                 <h3>DEV CONTROLS</h3>
                 <button onclick="generateNewColors()">Test</button>
                 <button onclick="stopPlaying()">STOP</button>
@@ -38,10 +39,9 @@
                     <br>
                     <h1 id="maxStreak">Max Streak: </h1>
                 </div>
-            </div>   
-        </div>
+            </div>    -->
     <div class="row footer  p-0 m-0 ">
-      <h1 class="offset-5 col-2 text-center">Copyright</h1>
+      <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
     </div>
 </body>
 <script src="../js/clean.js" ></script>
