--- a/GuitarHero/html/tempIndex.html
+++ b/GuitarHero/html/tempIndex.html
@@ -43,6 +43,7 @@
       
 
   </div>
+  
   <!-- Single Player  -->
   <div class="offset-3 col-6 main mt-5" id="menu1">
     <h1 class="text-center mb-3">SINGLE PLAYER</h1>
@@ -103,11 +104,22 @@
     <h2 class="mt-3 text-center" id="emptyLeaderboard"></h2>
     <div id="table-container"></div>
   </div>
-
-  <div class="row footer  p-0 m-0 ">
-    <h1 class="offset-5 col-2 text-center">Copyright</h1>
+  <div class="offset-3 col-6 controllerTips " id="controllerTips">
+    <p class="text-center mb-0">Up/Down - Navigate thought the menu</p>
+    <p class="text-center mb-0">Space - Select option</p>
+    <p class="text-center mb-0">Esc - Return</p>
+  </div>
+  <div class="offset-3 col-6 controllerTips " id="controllerTipsSingle">
+    <p class="text-center mb-0">Left/Right - Choose difficulty</p>
+    <p class="text-center mb-0">Enter - Confirm name</p>
+    <p class="text-center mb-0">Space - Select option</p>
+    <p class="text-center mb-0">Esc - Return</p>
   </div>
 
+  <div class="row footer  p-0 m-0 ">
+    <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
+  </div>
+  
 </body>
 <script src="../js/menuNavigation.js"></script>
 
