--- a/GuitarHero/html/tempIndex.html
+++ b/GuitarHero/html/tempIndex.html
@@ -106,7 +106,7 @@
     <p class="text-center mb-0">Esc - Return</p>
   </div>
 
-  <div class="row footer  p-0 m-0 ">
+  <div class="row footer fixed-bottom p-0 m-0 ">
     <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
   </div>
   
