--- a/GuitarHero/html/game.html
+++ b/GuitarHero/html/game.html
@@ -40,7 +40,7 @@
                     <h1 id="maxStreak">Max Streak: </h1>
                 </div>
             </div>    -->
-    <div class="row footer  p-0 m-0 ">
+    <div class="row footer fixed-bottom p-0 m-0 ">
       <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
     </div>
 </body>
