--- a/GuitarHero/html/multiplayer.html
+++ b/GuitarHero/html/multiplayer.html
@@ -21,9 +21,9 @@
         <h1 class="offset-5 col-2 text-center">Canvas Game</h1>
       </div>
         <div class="offset-3 col-6" >
-            <canvas class="offset-1 col-10 mt-3" id="marco" width="1100" height="900"></canvas>
+            <canvas class="col-11  mt-3" id="marco" width="1100" height="900"></canvas>
         </div>
-    <div class="row footer  p-0 m-0 ">
+    <div class="row footer fixed-bottom  p-0 m-0 ">
       <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
     </div>
 </body>
