Updated colors wip
ready to develop a function that changes global colors

--- a/GuitarHero/html/tempIndex.html
+++ b/GuitarHero/html/tempIndex.html
@@ -95,16 +95,11 @@
     <div id="table-container"></div>
   </div>
   <div class="offset-3 col-6 controllerTips " id="controllerTips">
-    <p class="text-center mb-0">Up/Down - Navigate thought the menu</p>
-    <p class="text-center mb-0">Space - Select option</p>
-    <p class="text-center mb-0">Esc - Return</p>
+    <p class="text-center mb-0">ARROWS - Navigate thought the menu</p>
+    <p class="text-center mb-0">SPACE - Select option</p>
+    <p class="text-center mb-0">ESC - Return</p>
   </div>
-  <div class="offset-3 col-6 controllerTips " id="controllerTipsSingle">
-    <p class="text-center mb-0">Left/Right - Choose difficulty</p>
-    <p class="text-center mb-0">Enter - Confirm name</p>
-    <p class="text-center mb-0">Space - Select option</p>
-    <p class="text-center mb-0">Esc - Return</p>
-  </div>
+
 
   <div class="row footer fixed-bottom p-0 m-0 ">
     <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
