--- a/GuitarHero/html/tempIndex.html
+++ b/GuitarHero/html/tempIndex.html
@@ -18,10 +18,10 @@
 
 </head>
 
-<body class="container-fluid row p-0 m-0">
+<body class="container-fluid row p-0 m-0" id="body">
 
   <!-- Headder  -->
-  <div class="row header  p-0 m-0 ">
+  <div class="row header  p-0 m-0 " id="header">
     <h1 class="offset-5 col-2 text-center">Canvas Game</h1>
   </div>
   <!-- Main Menu  -->
@@ -101,7 +101,7 @@
   </div>
 
 
-  <div class="row footer fixed-bottom p-0 m-0 ">
+  <div class="row footer fixed-bottom p-0 m-0 " id="footer">
     <h1 class="offset-5 col-2 text-center">Copyright ©Edu</h1>
   </div>
   
